cmake_minimum_required(VERSION 3.16)

set(lib_name spdlog)
set(target_name ext_${lib_name})

project(${lib_name})

include(../cmake/ExternalConfig.cmake)

if(WINDOWS)
  add_library(${target_name} SHARED IMPORTED GLOBAL)
else()
  add_library(${target_name} STATIC IMPORTED GLOBAL log.h)
endif()

set_target_properties(${target_name} PROPERTIES
        INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}/include"
        )

if(WINDOWS)
  set_target_properties(${target_name} PROPERTIES
          IMPORTED_LOCATION "${platform_spec_path}/lib${lib_name}.dll"
          IMPORTED_IMPLIB "${platform_spec_path}/lib${lib_name}.lib"
          )
else()
  set_target_properties(${target_name} PROPERTIES
          IMPORTED_LOCATION "${platform_spec_path}/lib${lib_name}.a"
          )
endif()
